--- a/03_computer_vision_pytorch.ipynb
+++ b/03_computer_vision_pytorch.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2758,6 +2759,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AnikaSD/Pytorch-basics-task-1/blob/main/03_computer_vision_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "#Pytorch Computer Vision"
       ],
@@ -3296,7 +3307,8 @@
           "height": 316
         },
         "id": "_oGjWdC9ZUh0",
-        "outputId": "d25b5c24-accc-4c3e-b9a2-4a905c8087be"
+        "outputId": "d25b5c24-accc-4c3e-b9a2-4a905c8087be",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -3344,7 +3356,8 @@
           "height": 281
         },
         "id": "sUu36l6bZrsj",
-        "outputId": "305812c4-7baf-44c9-e17b-538e2c05f1d9"
+        "outputId": "305812c4-7baf-44c9-e17b-538e2c05f1d9",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -3392,7 +3405,8 @@
           "height": 536
         },
         "id": "V7RgFhHBZ5go",
-        "outputId": "7c690c2c-70b7-468d-faeb-c3cf12fb59ed"
+        "outputId": "7c690c2c-70b7-468d-faeb-c3cf12fb59ed",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -3567,7 +3581,8 @@
           "height": 281
         },
         "id": "VXlGSJ1ITlsO",
-        "outputId": "311359d4-86d4-4520-abfe-715454d3bbaa"
+        "outputId": "311359d4-86d4-4520-abfe-715454d3bbaa",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
